Apply suggestions from code review
Co-authored-by: Erin Shaben <eshaben@icloud.com>

--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -171,9 +171,9 @@
     "\n",
     "The Bad prompt offers only the most rudimentary information—products and their sales—and provides no clear instructions beyond \"tell me about it.\" This inevitably results in:\n",
     "\n",
-    "- **Minimal context** - Without pricing, profit margins, or a specific goal (e.g., analyzing profitability, recommending strategies), the LLM can only produce surface-level observations.\n",
-    "- **No actionable guidance** - The prompt doesn't request particular insights or next steps, so the model responds with high-level statements rather than solutions.\n",
-    "- **Limited utility** - Because the data is purely quantitative (sales alone) and lacks details such as time frame, product characteristics, or marketing context, the response cannot go beyond pointing out which products sold more or less.\n",
+    "- **Minimal context**: Without pricing, profit margins, or a specific goal (e.g., analyzing profitability, recommending strategies), the LLM can only produce surface-level observations.\n",
+    "- **No actionable guidance**: The prompt doesn't request particular insights or next steps, so the model responds with high-level statements rather than solutions.\n",
+    "- **Limited utility**: Because the data is purely quantitative (sales alone) and lacks details such as time frame, product characteristics, or marketing context, the response cannot go beyond pointing out which products sold more or less.\n",
     "\n",
     "Overall, this prompt's lack of clear direction and supporting information stifles the model's ability to provide meaningful analysis or recommendations."
    ]
