--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -306,7 +306,7 @@
     "Let's take a closer look at the response above. The assistant’s reply isn’t prose; rather, it’s a structured tool call:\n",
     "\n",
     "1. **`finish_reason: \"tool_calls\"`**: Signals the model has paused, waiting for us to run one or more tools.\n",
-    "2. **`message.tool_calls[0]`** an array item that describes what to run:\n",
+    "2. **`message.tool_calls[0]`**: An array item that describes what to run:\n",
     "   * `id`: A unique identifier we must echo back.\n",
     "   * `function.name`: Here it's `calculator`.\n",
     "   * *`function.arguments`*: JSON-encoded string with the expression *`\"1337  42\"`.\n",
