--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -47,7 +47,7 @@
     "We're choosing accuracy for this tutorial because:\n",
     "\n",
     "1. It's easy to understand and interpret.\n",
-    "2. It directly answers the question: \"How often is our model correct?\".\n",
+    "2. It directly answers the question: \"How often is our model correct?\"\n",
     "\n",
     "In the next section, we'll see how to implement this metric in our evaluation pipeline.\n",
     "\n",
@@ -848,24 +848,24 @@
     "  - Accuracy: 80.7%\n",
     "  - Total tokens used: 138,699 (135,717 input / 2,982 output)\n",
     "  - Cost: $0.0992\n",
-    "  - Highest cost among the four models ❌.\n",
+    "  - Highest cost among the four models ❌\n",
     "\n",
     "- Llama 4 Maverick 17B:\n",
     "  - Accuracy: 80.5%\n",
     "  - Total tokens used: 147,549 (144,021 input / 3,528 output)\n",
     "  - Cost: $0.0316 ✅\n",
-    "  - Best overall cost-efficiency, delivering solid performance at the lowest price.\n",
+    "  - Best overall cost-efficiency, delivering solid performance at the lowest price\n",
     "\n",
     "- Llama 4 Scout 17B:\n",
     "  - Accuracy: 79.8%\n",
     "  - Total tokens used: 146,810 (144,021 input / 2,789 output)\n",
     "  - Cost: $0.1165\n",
-    "  - Slightly lower accuracy compared to Maverick, but significantly more expensive.\n",
+    "  - Slightly lower accuracy compared to Maverick, but significantly more expensive\n",
     "\n",
     "- Gemma 3 27B:\n",
     "  - Accuracy: 82.9% ✅\n",
     "  - Total tokens used: 145,796 (143,579 input / 2,217 output)\n",
-    "  - Best overall ratio between cost-efficiency and accuracy.\n",
+    "  - Best overall ratio between cost-efficiency and accuracy\n",
     "\n",
     "\n",
     "Each model was evaluated using the same set of 1000 movie overviews, with genre predictions compared against annotated ground-truth genres. Total input and output tokens were recorded and converted into USD using published prices per 1M tokens.\n",
