List Styling Update (#145)
* get-api-key update

* integration review

* integration review

* snippet

* dedicated deployment review

* get api review

* openai review

* fine tuning review

* mcp review

* start bulding review

* text classification tutorials

* tutorials

* llms

* Update get-started/get-api-key.md

Co-authored-by: Erin Shaben <eshaben@icloud.com>

* Update get-started/integrations/crewai.md

Co-authored-by: Erin Shaben <eshaben@icloud.com>

* apply feedback

* llms

* apply feedback on tutorials

* Apply suggestions from code review

Co-authored-by: Erin Shaben <eshaben@icloud.com>

* llms

---------

Co-authored-by: Erin Shaben <eshaben@icloud.com>

--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -74,8 +74,8 @@
    "source": [
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -386,11 +386,11 @@
     "\n",
     "To fine-tune a model, we'll take the following steps:\n",
     "\n",
-    "1. **Create the training data file** - we'll generate a JSON lines file with the training data that contains the data and ground truth\n",
-    "2. **Upload the training data file** - once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file\n",
-    "3. **Create fine-tuning job** - after the file is uploaded, we'll initiate the fine-tuning job, using the file ID obtained before\n",
-    "4. **Monitor job progress** - (optional) track the status of the fine-tuning job to ensure it has been successfully completed\n",
-    "5. **Retrieve results** - once the job has completed execution, we will get a fine-tuned model that we can use\n",
+    "1. **Create the training data file**: We'll generate a JSON lines file with the training data that contains the data and ground truth.\n",
+    "2. **Upload the training data file**: Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
+    "3. **Create fine-tuning job**: After the file is uploaded, we'll initiate the fine-tuning job, using the file ID obtained before.\n",
+    "4. **Monitor job progress (optional)**: Track the status of the fine-tuning job to ensure it has been successfully completed.\n",
+    "5. **Retrieve results**: Once the job has completed execution, we will get a fine-tuned model that we can use.\n",
     "\n",
     "This notebook is prepared for you to follow along. Run the cells below to watch it all come together.\n",
     "\n",
@@ -1325,17 +1325,17 @@
     "\n",
     "This tutorial showed how to fine-tune a large language model using the kluster.ai platform for a financial sentiment analysis task. Key takeaways include:\n",
     "\n",
-    "- Data preparation: a subset of 1500 financial headlines was used, split into training and testing sets\n",
-    "- Fine-tuning: we fine-tuned `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo` using labeled training data and system prompts for targeted learning\n",
-    "- Batch inference & evaluation: we compared the fine-tuned model with a much larger base model (`Llama3.3-70B`) and the original untuned `Llama3.1-8B`\n",
-    "- Performance: the fine-tuned model delivered **higher accuracy** than the untuned 8B model, and surprisingly, **outperformed** the 70B model — all at **lower inference cost**. Note that the results may vary depending on the fine-tuning hyperparameters, temperature, among others\n",
+    "- Data preparation: a subset of 1500 financial headlines was used, split into training and testing sets.\n",
+    "- Fine-tuning: we fine-tuned `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo` using labeled training data and system prompts for targeted learning.\n",
+    "- Batch inference & evaluation: we compared the fine-tuned model with a much larger base model (`Llama3.3-70B`) and the original untuned `Llama3.1-8B`.\n",
+    "- Performance: the fine-tuned model delivered **higher accuracy** than the untuned 8B model, and surprisingly, **outperformed** the 70B model — all at **lower inference cost**. Note that the results may vary depending on the fine-tuning hyperparameters, temperature, among others.\n",
     "\n",
     "This reinforces the value of fine-tuning for domain-specific tasks: improved performance, reduced cost, and faster inference. Moreover, with kluster.ai, we achieved all this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
     "You are now ready to experiment further with:\n",
-    "- Larger or more diverse datasets\n",
-    "- Hyperparameter tuning\n",
-    "- Alternate system prompts or evaluation metrics\n",
+    "- Larger or more diverse datasets.\n",
+    "- Hyperparameter tuning.\n",
+    "- Alternate system prompts or evaluation metrics.\n",
     "\n",
     "Fine-tuning doesn't just make your model better — it makes it *yours*.\n"
    ]
