--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide\n",
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide.\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -238,11 +238,11 @@
     "\n",
     "To execute the batch inference job, we'll create the following functions:\n",
     "\n",
-    "1. **Create the batch job file** - we'll generate a JSON lines file with the desired requests to be processed by the model. Consequently, we'll create a file for the assistant model and one for the judge model. You can also work with a single file by providing the different models for each request\n",
-    "2. **Upload the batch job file** - once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file\n",
-    "3. **Start the batch job** - after the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before\n",
-    "4. **Monitor job progress** - (optional) track the status of the batch job to ensure it has been successfully completed\n",
-    "5. **Retrieve results** - once the job has completed execution, we can access and process the resultant data\n",
+    "1. **Create the batch job file**: We'll generate a JSON lines file with the desired requests to be processed by the model. Consequently, we'll create a file for the assistant model and one for the judge model. You can also work with a single file by providing the different models for each request.\n",
+    "2. **Upload the batch job file**: Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
+    "3. **Start the batch job**: After the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before.\n",
+    "4. **Monitor job progress (optional)**: Track the status of the batch job to ensure it has been successfully completed.\n",
+    "5. **Retrieve results**: Once the job has completed execution, we can access and process the resultant data.\n",
     "\n",
     "Next, we will run the functions for the base model and feed the results to the pipeline using the judge model.\n",
     "\n",
@@ -975,13 +975,13 @@
     "First, we built a pipeline to submit batch jobs and retrieve results using the base model. We then applied the same pipeline with a larger \"judge\" model, which evaluated whether the base model's genre predictions were correct, based on strict formatting and semantic criteria.\n",
     "\n",
     "Finally, we compared three types of accuracy (results may vary depending on each notebook execution):\n",
-    "- Base model accuracy against LLM ground truth: 59.2%  \n",
-    "- Base model accuracy against real ground truth: 72.5%  \n",
-    "- Judge model accuracy against real ground truth: 76.7%\n",
+    "- Base model accuracy against LLM ground truth: 59.2%.\n",
+    "- Base model accuracy against real ground truth: 72.5%.\n",
+    "- Judge model accuracy against real ground truth: 76.7%.\n",
     "\n",
     "These results show that while the base model achieved moderate accuracy when compared to human-annotated ground truth, it performed significantly worse when judged by the larger model. This suggests that the judge model applies stricter or more nuanced evaluation criteria. Notably, the judge model achieved the highest accuracy compared to the real ground truth.\n",
     "\n",
-    "As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!\n"
+    "As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
    ]
   }
  ],
