--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -27,10 +27,10 @@
     "\n",
     "This tutorial walks through a notebook where you'll learn how to systematically evaluate Large Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API, showcasing a practical example of comparing different models for a real-world task. The systematic evaluation pipeline does the following:\n",
     "\n",
-    "1. Loads and processes a public dataset (which you can later replace with your own)\n",
-    "2. Tests three state-of-the-art models on a text classification task\n",
-    "3. Compares their accuracy using annotated data\n",
-    "4. Helps you make an informed decision based on both performance and cost\n",
+    "1. Loads and processes a public dataset (which you can later replace with your own).\n",
+    "2. Tests three state-of-the-art models on a text classification task.\n",
+    "3. Compares their accuracy using annotated data.\n",
+    "4. Helps you make an informed decision based on both performance and cost.\n",
     "\n",
     "You'll be using the same dataset as in our <a href=\"/tutorials/klusterai-api/text-classification/text-classification-openai-api/\" target=\"_blank\">text classification notebook</a>, which is an extract from the IMDB top 1000 movies dataset categorized into 21 different genres.\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "We're choosing accuracy for this tutorial because:\n",
     "\n",
-    "1. It's easy to understand and interpret\n",
+    "1. It's easy to understand and interpret.\n",
     "2. It directly answers the question: \"How often is our model correct?\"\n",
     "\n",
     "In the next section, we'll see how to implement this metric in our evaluation pipeline.\n",
@@ -55,8 +55,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide\n",
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide.\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -261,11 +261,11 @@
     "\n",
     "To execute the batch inference job, we'll take the following steps:\n",
     "\n",
-    "1. **Create the batch job file** - we'll generate a JSON lines file with the desired requests to be processed by the model\n",
-    "2. **Upload the batch job file** - once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file\n",
-    "3. **Start the batch job** - after the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before\n",
-    "4. **Monitor job progress** - (optional) track the status of the batch job to ensure it has been successfully completed\n",
-    "5. **Retrieve results** - once the job has completed execution, we can access and process the resultant data\n",
+    "1. **Create the batch job file**: We'll generate a JSON lines file with the desired requests to be processed by the model.\n",
+    "2. **Upload the batch job file**: Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
+    "3. **Start the batch job**: After the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before.\n",
+    "4. **Monitor job progress (optional)**: Track the status of the batch job to ensure it has been successfully completed.\n",
+    "5. **Retrieve results**: Once the job has completed execution, we can access and process the resultant data.\n",
     "\n",
     "This notebook is prepared for you to follow along. Run the cells below to watch it all come together.\n",
     "\n",
@@ -872,10 +872,10 @@
     "\n",
     "To submit and evaluate the batch jobs, we:\n",
     "\n",
-    "1. Created the JSONL file, where each file line represented a separate request\n",
-    "2. Submitted the file to the platform\n",
-    "3. Started the batch job and monitored its progress\n",
-    "4. Once completed, we fetched the results\n",
+    "1. Created the JSONL file, where each file line represented a separate request.\n",
+    "2. Submitted the file to the platform.\n",
+    "3. Started the batch job and monitored its progress.\n",
+    "4. Once completed, we fetched the results.\n",
     "\n",
     "The results were then visualized in a bar chart showing **accuracy**, **token usage**, and **cost per model**, allowing for a clear comparison of trade-offs between quality and efficiency.\n",
     "\n",
