--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -15,7 +15,7 @@
       "id": "581c9428",
       "metadata": {},
       "source": [
-        "Large language models occasionally invent facts (“hallucinations”). **kluster Verify** is a drop‑in fact‑checker that scores any LLM response for reliability—either with one click inside the kluster Playground or via a simple API call.\n",
+        "Large language models occasionally invent facts (“hallucinations”). **[kluster Verify](https://docs.kluster.ai/get-started/verify/reliability/overview/)** is a drop‑in fact‑checker that scores any LLM response for reliability—either with one click inside the kluster Playground or via a simple API call.\n",
         "\n",
         "This notebook shows you how to:\n",
         "1. Trigger a one‑click verification in the Playground (no code).\n",
