--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -23,7 +23,7 @@
         "3. Interpret the JSON response returned by kluster Verify.\n",
         "4. Apply best‑practice guard‑rails in your own applications.\n",
         "\n",
-        "> **Note** – We use *mistral‑small‑2506* as the demo model. Performance varies by model and prompt, so feel free to experiment."
+        "> **Note** – We use *mistral‑small‑2506* as the demo model to generate the example prompt responses. Performance varies by model and prompt, so feel free to experiment."
       ]
     },
     {
@@ -31,7 +31,7 @@
       "id": "08080c97",
       "metadata": {},
       "source": [
-        "## How kluster Verify Works Under the Hood\n",
+        "## How kluster Verify works under the hood\n",
         "\n",
         "1. **Inputs** – You send at least two fields:\n",
         "   * `prompt`: the original user request.\n",
