--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -15,13 +15,12 @@
       "id": "581c9428",
       "metadata": {},
       "source": [
-        "Large language models occasionally invent facts (“hallucinations”). **[kluster Verify](https://docs.kluster.ai/get-started/verify/reliability/overview/)** is a drop‑in fact‑checker that scores any LLM response for reliability—either with one click inside the kluster Playground or via a simple API call.\n",
+        "Large language models occasionally invent facts (“hallucinations”). **[kluster Verify](https://docs.kluster.ai/get-started/verify/reliability/overview/)** is a drop‑in fact‑checker that scores any LLM response for reliability—either with one click inside the [kluster Playground](https://platform.kluster.ai/playground) or via a simple API call.\n",
         "\n",
         "This notebook shows you how to:\n",
-        "1. Trigger a one‑click verification in the Playground (no code).\n",
-        "2. Call the `POST /v1/verify/reliability` endpoint to fact‑check model output programmatically.\n",
-        "3. Interpret the JSON response returned by kluster Verify.\n",
-        "4. Apply best‑practice guard‑rails in your own applications.\n",
+        "1. Call the `POST /v1/verify/reliability` endpoint to fact‑check model output programmatically.\n",
+        "2. Interpret the JSON response returned by kluster Verify.\n",
+        "3. Apply best‑practice guard‑rails in your own applications.\n",
         "\n",
         "> **Note** – We use *mistral‑small‑2506* as the demo model to generate the example prompt responses. Performance varies by model and prompt, so feel free to experiment."
       ]
@@ -37,8 +36,8 @@
         "   * `prompt`: the original user request.\n",
         "   * `output`: the LLM’s answer you want to check.\n",
         "   * *(Optional)* `context`: a set of ground‑truth docs (URLs, text, PDFs, etc.). When provided, Verify **only** looks inside this sandbox.\n",
-        "2. **Retrieval & Evidence Gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
-        "3. **Cross‑Examination** – Verify compares factual claims in `output` against the gathered evidence using an ensemble of retrieval‑augmented reasoning models.\n",
+        "2. **Retrieval & evidence gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
+        "3. **Cross‑Examination** – Verify compares factual claims in `output` against the gathered evidence.\n",
         "4. **Scoring** – It returns:\n",
         "   * `is_hallucination` – Boolean verdict.\n",
         "   * `explanation` – Natural‑language rationale.\n",
