add hallucination leaderboard etc

--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -38,7 +38,7 @@
         "   * *(Optional)* `context`: a set of ground‑truth docs (URLs, text, PDFs, etc.). When provided, Verify **only** looks inside this sandbox.\n",
         "2. **Retrieval & evidence gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
         "3. **Cross‑Examination** – Verify compares factual claims in `output` against the gathered evidence.\n",
-        "4. **Scoring** – It returns:\n",
+        "4. **Results** – It returns:\n",
         "   * `is_hallucination` – Boolean verdict.\n",
         "   * `explanation` – Natural‑language rationale.\n",
         "   * `search_results` – List of URLs & snippets (if `return_search_results=true`).\n",
@@ -109,7 +109,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import requests, json, textwrap"
+        "import requests, json"
       ]
     },
     {
