--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -33,7 +33,7 @@
         "## How kluster Verify works under the hood\n",
         "\n",
         "1. **Inputs** – You send at least two fields:\n",
-        "   * `prompt`: the original user request.\n",
+        "   * `prompt`: The original user request.\n",
         "   * `output`: the LLM’s answer you want to check.\n",
         "   * *(Optional)* `context`: a set of ground‑truth docs (URLs, text, PDFs, etc.). When provided, Verify **only** looks inside this sandbox.\n",
         "2. **Retrieval & evidence gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
@@ -234,11 +234,12 @@
       "metadata": {},
       "source": [
         "## Best Practices\n",
-        "1. **Auto‑verify short answers** – the[kluster Playground] has an auto-verify feature that you can enable with one click\n",
+        "1. **Auto‑verify short answers** – the [kluster Playground](https://platform.kluster.ai/playground) has an auto-verify feature that you can enable with one click\n",
         "2. **Block, regenerate, or escalate** whenever `is_hallucination == true`.\n",
-        "3. **Constrain with `context`** when you have trusted documents; Verify then ignores the wider web.\n",
+        "3. **Constrain with `context`** when context is provided, the service only validates answers against the specified context.\n",
         "4. **Log evidence** – keep `search_results` so reviewers can audit decisions.\n",
-        "5. **Experiment** – Different LLMs hallucinate differently. Try other models (e.g., Gemma, Llama 3) and prompts to see how Verify responds."
+        "5. **Experiment** – Different LLMs hallucinate differently. Try other models (e.g., Gemma, Llama 3) and prompts to see how Verify responds. \n",
+        "6. **Check out the Hallucination Leaderboard** - the kluster team built a [Hallucination Leaderboard]( https://huggingface.co/spaces/kluster-ai/LLM-Hallucination-Detection-Leaderboard) that showcases model hallucination rates across RAG and non-RAG settings, which can help you pick the model best suited for your use case."
       ]
     },
     {
