--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -35,7 +35,7 @@
         "1. **Inputs** – You send at least two fields:\n",
         "   * `prompt`: The original user request.\n",
         "   * `output`: the LLM’s answer you want to check.\n",
-        "   * *(Optional)* `context`: a set of ground‑truth docs (URLs, text, PDFs, etc.). When provided, Verify **only** looks inside this sandbox.\n",
+        "   * *(Optional)* `context`: A set of ground‑truth docs (URLs, text, PDFs, etc.) that Verify **only** reads in this sandbox.\n",
         "2. **Retrieval & evidence gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
         "3. **Cross‑Examination** – Verify compares factual claims in `output` against the gathered evidence.\n",
         "4. **Results** – It returns:\n",
@@ -70,7 +70,7 @@
       "id": "546df0e5",
       "metadata": {},
       "source": [
-        "Install required libraries. The kluster API is OpenAI‑compatible, so we reuse the `openai` Python client. We’ll also need `requests`."
+        "Install required libraries. The kluster API is OpenAI‑compatible, so you can reuse the `openai` Python client. You'll also need `requests`."
       ]
     },
     {
