--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -32,13 +32,13 @@
       "source": [
         "## How kluster Verify works under the hood\n",
         "\n",
-        "1. **Inputs** – You send at least two fields:\n",
+        "1. **Inputs**: You send at least two fields:\n",
         "   * `prompt`: The original user request.\n",
-        "   * `output`: the LLM’s answer you want to check.\n",
+        "   * `output`: The LLM’s response to be checked.\n",
         "   * *(Optional)* `context`: A set of ground‑truth docs (URLs, text, PDFs, etc.) that Verify **only** reads in this sandbox.\n",
-        "2. **Retrieval & evidence gathering** – If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
-        "3. **Cross‑Examination** – Verify compares factual claims in `output` against the gathered evidence.\n",
-        "4. **Results** – It returns:\n",
+        "2. **Retrieval & evidence gathering**: If `context` is omitted, Verify performs real‑time web search and retrieval, pulling the top public sources most likely to contain evidence.\n",
+        "3. **Cross‑Examination**: Verify compares factual claims in `output` against the gathered evidence.\n",
+        "4. **Results**: It returns:\n",
         "   * `is_hallucination` – Boolean verdict.\n",
         "   * `explanation` – Natural‑language rationale.\n",
         "   * `search_results` – List of URLs & snippets (if `return_search_results=true`).\n",
@@ -234,12 +234,12 @@
       "metadata": {},
       "source": [
         "## Best Practices\n",
-        "1. **Auto‑verify short answers** – the [kluster Playground](https://platform.kluster.ai/playground) has an auto-verify feature that you can enable with one click\n",
-        "2. **Block, regenerate, or escalate** whenever `is_hallucination == true`.\n",
-        "3. **Constrain with `context`** when context is provided, the service only validates answers against the specified context.\n",
-        "4. **Log evidence** – keep `search_results` so reviewers can audit decisions.\n",
-        "5. **Experiment** – Different LLMs hallucinate differently. Try other models (e.g., Gemma, Llama 3) and prompts to see how Verify responds. \n",
-        "6. **Check out the Hallucination Leaderboard** - the kluster team built a [Hallucination Leaderboard]( https://huggingface.co/spaces/kluster-ai/LLM-Hallucination-Detection-Leaderboard) that showcases model hallucination rates across RAG and non-RAG settings, which can help you pick the model best suited for your use case."
+        "1. **Auto‑verify short answers**: The [kluster Playground](https://platform.kluster.ai/playground) has an auto-verify feature that you can enable with one click\n",
+        "2. **Block, regenerate, or escalate**: Whenever `is_hallucination == true`, take corrective action.\n",
+        "3. **Constrain with `context`**: When context is provided, the service only validates answers against the specified context.\n",
+        "4. **Log evidence**: Keep `search_results` so reviewers can audit decisions.\n",
+        "5. **Experiment**: Different LLMs hallucinate differently. Try other models (e.g., Gemma, Llama 3) and prompts to see how Verify responds. \n",
+        "6. **Check out the Hallucination Leaderboard**: The kluster team built a [Hallucination Leaderboard]( https://huggingface.co/spaces/kluster-ai/LLM-Hallucination-Detection-Leaderboard) that showcases model hallucination rates across RAG and non-RAG settings, which can help you pick the model best suited for your use case."
       ]
     },
     {
