Refer to Dedicated Deployments in Tutorials (#137)
* refer to dedicated deployments

* llms

* capitalization

* llms

--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -60,7 +60,7 @@
    "id": "342a8e93-3bac-41c1-8bd5-16daaa9f7039",
    "metadata": {},
    "source": [
-    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your kluster API key when prompted. Then, we'll import the required dependencies, specify the LLM model to use, and initialize the client. Refer to the [supported models](https://docs.kluster.ai/get-started/models/) chart if you're unsure which one to choose. "
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. Provide your kluster API key when prompted. Then, we'll import the required dependencies, specify the LLM model to use, and initialize the client. Refer to the [supported models](https://docs.kluster.ai/get-started/models/) chart if you're unsure which one to choose or launch your own [dedicated deployment](https://docs.kluster.ai/get-started/dedicated-deployments/).  "
    ]
   },
   {
@@ -85,7 +85,10 @@
     "\n",
     "api_key = getpass('Enter your kluster.ai API key: ')\n",
     "\n",
-    "# Feel free to swap out the model with any of Kluster's supported models\n",
+    "# Feel free to swap out the model with any of kluster's supported models\n",
+    "# You can also use your own kluster.ai dedicated deployment after launching one\n",
+    "# And specifying the model ID as the model parameter. \n",
+    "# For more details, see https://docs.kluster.ai/get-started/dedicated-deployments/\n",
     "model = \"google/gemma-3-27b-it\"\n",
     "client = OpenAI(base_url=\"https://api.kluster.ai/v1\", api_key=api_key)"
    ]
