--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -419,7 +419,7 @@
    "source": [
     "This example uses the `deepseek-ai/DeepSeek-V3-0324` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. \n",
     "\n",
-    "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
+    "Please refer to the [supported models](https://docs.kluster.ai/get-started/models/) section for a list of the models we support. You can also launch your own [dedicated deployment](https://docs.kluster.ai/get-started/dedicated-deployments/) to benefit from predictable per-minute billing and zero token costs.\n",
     "\n",
     "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes."
    ]
@@ -1177,7 +1177,7 @@
     "\n",
     "All of this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
-    "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
+    "kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
    ]
   }
  ],
