--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -192,6 +192,10 @@
     "                \"method\": \"POST\",\n",
     "                \"url\": \"/v1/chat/completions\",\n",
     "                \"body\": {\n",
+    "                    # Feel free to swap out the model with any of kluster's supported models\n",
+    "                    # You can also use your own kluster.ai dedicated deployment after launching one\n",
+    "                    # And specifying the model ID as the model parameter. \n",
+    "                    # For more details, see https://docs.kluster.ai/get-started/dedicated-deployments/\n",
     "                    \"model\": \"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\",\n",
     "                    \"temperature\": 0.7,\n",
     "                    \"messages\": [\n",
