--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b17a77d9",
+   "metadata": {},
+   "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/rag.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8566fe2a",
    "metadata": {},
    "source": [
