--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -70,7 +70,7 @@
       "id": "546df0e5",
       "metadata": {},
       "source": [
-        "Install the required libraries. Since the kluster API is OpenAI‑compatible, so you can reuse the `openai` Python client, but you'll also need `requests`."
+        "Install the required libraries. Since the kluster API is OpenAI‑compatible, you can reuse the `openai` Python client, but you'll also need `requests`."
       ]
     },
     {
