--- a/tutorials/klusterai-api/combat-hallucinations.ipynb
+++ b/tutorials/klusterai-api/combat-hallucinations.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "## How kluster Verify Works Under the Hood\n",
         "\n",
-        "1. **Inputs**: You send at least two fields:\n",
+        "1. **Inputs**:\n",
         "   * `prompt`: The original user request.\n",
         "   * `output`: The LLM’s response to be checked.\n",
         "   * *(Optional)* `context`: A set of ground‑truth docs (URLs, text, PDFs, etc.) that Verify **only** reads in this sandbox.\n",
@@ -54,7 +54,7 @@
         "## Prerequisites\n",
         "\n",
         "- **kluster.ai account**: Sign up at <https://platform.kluster.ai/signup>.\n",
-        "- A **kluster.ai api key**: Create one in **api keys** (<https://platform.kluster.ai/apikeys>)."
+        "- **kluster.ai api key**: Create one at <https://platform.kluster.ai/apikeys>."
       ]
     },
     {
