revise link for api key

--- a/tutorials/klusterai-api/reliability.ipynb
+++ b/tutorials/klusterai-api/reliability.ipynb
@@ -47,7 +47,7 @@
     "  platform</a> if you don't have one\n",
     "  - **A kluster.ai API key**: after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" \n",
     "  target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a \n",
-    "  href=\"/verify/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "  href=\"https://docs.kluster.ai/verify/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
