--- a/tutorials/klusterai-api/reliability.ipynb
+++ b/tutorials/klusterai-api/reliability.ipynb
@@ -6,7 +6,9 @@
    "metadata": {
     "id": "be189fde-4e5b-4f80-bae1-ded86a5075a7"
    },
-   "source": "# Reliability with the kluster.ai API"
+   "source": [
+    "# Reliability with the kluster.ai API"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -14,7 +16,9 @@
    "metadata": {
     "id": "b17a77d9"
    },
-   "source": "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/reliability.ipynb)"
+   "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/reliability.ipynb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,7 +26,19 @@
    "metadata": {
     "id": "1176978c-51e6-4f4a-8972-63a20f00a70c"
    },
-   "source": "## Introduction\n\nReliability issues in AI occur when models generate information that appears plausible but is unreliable or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n\nThis tutorial demonstrates how to use <a href=\"/get-started/verify/reliability/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n\nThe service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n\n- Verify reliability in individual Q&A pairs.\n- Compare general knowledge verification vs. context validation modes.\n- Validate responses in full conversation histories."
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "Reliability issues in AI occur when models generate information that appears plausible but is unreliable or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n",
+    "\n",
+    "This tutorial demonstrates how to use <a href=\"/verify/overview/\" target=\"_self\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n",
+    "\n",
+    "The service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n",
+    "\n",
+    "- Verify reliability in individual Q&A pairs.\n",
+    "- Compare general knowledge verification vs. context validation modes.\n",
+    "- Validate responses in full conversation histories."
+   ]
   },
   {
    "cell_type": "markdown",
