--- a/tutorials/klusterai-api/reliability.ipynb
+++ b/tutorials/klusterai-api/reliability.ipynb
@@ -14,7 +14,7 @@
    "metadata": {
     "id": "b17a77d9"
    },
-   "source": "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/reliability.ipynb)"
+   "source": "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/reliability-check.ipynb)"
   },
   {
    "cell_type": "markdown",
@@ -22,7 +22,7 @@
    "metadata": {
     "id": "1176978c-51e6-4f4a-8972-63a20f00a70c"
    },
-   "source": "## Introduction\n\nReliability issues in AI occur when models generate information that appears plausible but is unreliable or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n\nThis tutorial demonstrates how to use <a href=\"/get-started/verify/reliability/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n\nThe service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n\n- Verify reliability in individual Q&A pairs.\n- Compare general knowledge verification vs. context validation modes.\n- Validate responses in full conversation histories."
+   "source": "## Introduction\n\nReliability issues in AI occur when models generate information that appears plausible but is unreliable or unsupported by the provided context. This poses significant risks in production applications, particularly in domains where accuracy is critical.\n\nThis tutorial demonstrates how to use <a href=\"https://docs.kluster.ai/verify/overview/\" target=\"_blank\">Verify</a> to identify and prevent reliability issues in your applications. We'll explore available methods: a dedicated API endpoint and via chat completions.\n\nThe service can evaluate AI responses based on provided context (perfect for RAG applications) or perform real-time verification against general knowledge. By following this tutorial, you'll learn how to:\n\n- Verify Reliability in individual Q&A pairs.\n- Compare general knowledge verification vs. context validation modes.\n- Validate responses in full conversation histories."
   },
   {
    "cell_type": "markdown",
@@ -47,7 +47,7 @@
     "  platform</a> if you don't have one\n",
     "  - **A kluster.ai API key**: after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" \n",
     "  target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a \n",
-    "  href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+    "  href=\"https://docs.kluster.ai/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
    ]
   },
   {
@@ -985,7 +985,7 @@
    "id": "d56fa810",
    "metadata": {},
    "source": [
-    "Now, by comparing these two answers, we can test the Verify reliability check response:"
+    "Now, by comparing these two answers, we can test the Verify Reliability check response:"
    ]
   },
   {
